# amaynet

./: .clang-tidy  .gitignore  .travis.yml  AmayHTTPSConfig.h.in  AmayNetConfig.h.in  CMakeLists.txt  LICENSE  README.md  compile_commands.json  doc.org  syntax_check.sh
.gitlab/issue_templates/: default.md
.gitlab/merge_request_templates/: default.md
demo/: CMakeLists.txt  chat_client.cxx  chat_server.cxx  download_file.cxx  httpserver.cxx
demo/public/: another.html  index.css  index.html  text.txt
docs/: Doxyfile.in  mainpage.md  stylesheet.css
include/: AmayNetConfig.hxx  common.hxx
include/HTTP/: Server.hxx
include/TCP/: TCP.hxx  TCPClient.hxx  TCPListener.hxx
src/: common.cxx  main.cxx
src/HTTP/: CMakeLists.txt  HTTPServ.hxx  Server.cxx  Server.hxx  status.hxx
src/TCP/: CMakeLists.txt  Connection.cxx  Connection.hxx  TCP.cxx  TCP.hxx  TCPClient.cxx  TCPClient.hxx  TCPListener.cxx  TCPListener.hxx
test/: CMakeLists.txt  HTTP_test.cxx  TCP_test.cxx  common_test.cxx  test_main.cxx  test_test.cxx
